tests/typing/fail/module_function_module_method_inherited_fail.rb

module B
  def bar() 3 end
end

module A

  include B
  module_function :bar
end

A::bar.blah
